# shipment-intelligence

./: .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yaml
backend/: .env.example  Dockerfile  README.md  mock_events.md  pyproject.toml
backend/mock_data/: data.py
backend/playground/: run_orchestrator.py  run_rag.py
backend/shipment_intelligence_api/: main.py
backend/shipment_intelligence_api/agents/: constants.py  router.py  schema.py  service.py
backend/shipment_intelligence_api/agents/analysis_agent/: agent.py  mock_data.py  prompts.py  tools.py
backend/shipment_intelligence_api/agents/escalation_agent/: agent.py  prompts.py  tool.py
backend/shipment_intelligence_api/agents/orchestrator/: state.py  workflow.py
backend/shipment_intelligence_api/agents/response_agent/: agent.py  prompts.py  schema.py
backend/shipment_intelligence_api/agents/retrieval_agent/: agent.py  mock_data.py  prompts.py  schema.py
backend/shipment_intelligence_api/core/: constants.py  dependencies.py  exceptions.py  logging.py  settings.py
backend/shipment_intelligence_api/health/: router.py
backend/shipment_intelligence_api/infrastructure/embeddings/: embedding_provider.py
backend/shipment_intelligence_api/infrastructure/health/: router.py
backend/shipment_intelligence_api/infrastructure/llm/: llm_provider.py
backend/shipment_intelligence_api/infrastructure/vector_store/: qdrant_client_provider.py  qdrant_store_manager.py
backend/shipment_intelligence_api/rag/: pipeline.py  prompts.py  router.py  schema.py  service.py  state.py
backend/shipment_intelligence_api/shared/: constants.py  utils.py
frontend/: agents-ui.html  config.js  index.html  rag-chatbot-ui.html
