[project]
name = "shipment-intelligence-api"
version = "0.1.0"
description = "Agent-based API for shipment intelligence"
authors = [
    {name = "SURYA",email = "15arul.surya16@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.129.0,<0.130.0)",
    "uvicorn (>=0.40.0,<0.41.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
