[project]
name = "shipment-intelligence-api"
version = "0.2.0"
description = "Agent-based API for shipment intelligence"
authors = [
    {name = "SURYA",email = "15arul.surya16@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.129.0,<0.130.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "langchain (>=1.2.10,<2.0.0)",
    "langgraph (>=1.0.8,<2.0.0)",
    "langchain-google-genai (>=4.2.0,<5.0.0)",
    "langchain-qdrant (>=1.1.0,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
